[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Global.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/Main.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Fonts/title_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Sprites/UI/transitions/transition1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/UI/transitions/transition2.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "down"
tracks/0/type = "value"
tracks/0/path = NodePath("Transitions:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 224 ), Vector2( 0, 448 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "change_scene_ready" ],
"method": "emit_signal"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "left"
tracks/0/type = "value"
tracks/0/path = NodePath("Transitions:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 384, 224 ), Vector2( 0, 224 ), Vector2( -384, 224 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "change_scene_ready" ],
"method": "emit_signal"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "right"
tracks/0/type = "value"
tracks/0/path = NodePath("Transitions:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -320, 224 ), Vector2( 0, 224 ), Vector2( 320, 224 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "change_scene_ready" ],
"method": "emit_signal"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "up"
tracks/0/type = "value"
tracks/0/path = NodePath("Transitions:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 448 ), Vector2( 0, 224 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "change_scene_ready" ],
"method": "emit_signal"
} ]
}

[node name="Global" type="Node"]
pause_mode = 2
script = ExtResource( 1 )
max_unlocked_level = 4
sfx_volume = 0.7
music_volume = 0.7

[node name="TransitionLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="TransitionPlayer" type="AnimationPlayer" parent="TransitionLayer"]
anims/down = SubResource( 1 )
anims/left = SubResource( 2 )
anims/right = SubResource( 3 )
anims/up = SubResource( 4 )

[node name="Transitions" type="Node2D" parent="TransitionLayer"]

[node name="Transition0" type="Sprite" parent="TransitionLayer/Transitions"]
visible = false
position = Vector2( 160, -128 )
scale = Vector2( 10, 1 )
texture = ExtResource( 5 )

[node name="Transition1" type="Sprite" parent="TransitionLayer/Transitions"]
visible = false
position = Vector2( 160, -128 )
scale = Vector2( 5, 1 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 256 )

[node name="Transition2" type="Sprite" parent="TransitionLayer/Transitions"]
visible = false
position = Vector2( 160, -128 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 320, 256 )

[node name="Transition3" type="Sprite" parent="TransitionLayer/Transitions"]
visible = false
position = Vector2( 160, -128 )
scale = Vector2( 5, 1 )
texture = ExtResource( 6 )
flip_v = true
region_enabled = true
region_rect = Rect2( 0, 0, 64, 256 )

[node name="Transition4" type="Sprite" parent="TransitionLayer/Transitions"]
visible = false
position = Vector2( 160, -128 )
rotation = 1.5708
scale = Vector2( 8, 1.75 )
texture = ExtResource( 5 )

[node name="HUD" type="CanvasLayer" parent="."]
layer = 2

[node name="Pause" type="Control" parent="HUD"]
margin_right = 320.0
margin_bottom = 184.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HUD/Pause"]
margin_right = 320.0
margin_bottom = 184.0
color = Color( 0.105882, 0.105882, 0.105882, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Pause"]
margin_right = 320.0
margin_bottom = 184.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Pause/VBoxContainer"]
margin_right = 320.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 1
text = "Pause"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="HUD/Pause/VBoxContainer"]
margin_top = 40.0
margin_right = 320.0
margin_bottom = 184.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Pause/VBoxContainer/CenterContainer"]
margin_left = 111.0
margin_top = 51.0
margin_right = 208.0
margin_bottom = 93.0

[node name="Continue" type="Button" parent="HUD/Pause/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 97.0
margin_bottom = 19.1655
text = "Continue"

[node name="BackToMenu" type="Button" parent="HUD/Pause/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 97.6267
margin_bottom = 42.1655
text = "Back to menu"
[connection signal="pressed" from="HUD/Pause/VBoxContainer/CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="HUD/Pause/VBoxContainer/CenterContainer/VBoxContainer/BackToMenu" to="." method="_on_BackToMenu_pressed"]
